--- a/src/main/resources/assets/thaumicinsurgence/lang/en_US.lang
+++ b/src/main/resources/assets/thaumicinsurgence/lang/en_US.lang
@@ -16,26 +16,31 @@ thaumicinsurgence.config.category.modules.tooltip=Options to enable or disable i
 tc.research_category.THAUMICINSURGENCE=Thaumic Insurgence
 
 tc.research_name.TI_InfusionIntercepter=Infusion Intercepter
-tc.research_text.TI_InfusionIntercepter=Messing with Azanor's "balance" since 2022!
+tc.research_text.TI_InfusionIntercepter=Oh eldritch, what have I [D0NE?]
 
 tc.research_name.TI_ThaumicInterfacer=Madman's Lens
 tc.research_text.TI_ThaumicInterfacer=Seeing between the cracks
-InfusionIntercepter.1=Do you hate how slow infusion is? Are you sick and tired of the lag associated with WAing it? WELL DO I HAVE THE SOLUTION FOR YOU!!! FOR ONE LOW LOW PAYMENT OF [$4.99 warp] I CAN JAILBREAK YOUR INFUSION MATRIX FOR YOU AND ALLOW IT TO ACCEPT THE ESSENTIA PROVIDER!!! Place the intercepter directly below your infusion altar's center pedestal, it takes essentia from the bottom face.
+InfusionIntercepter.1=Finally, after all of this time... <BR><BR>You finally did it...<BR><BR>After years of hard work and a pact with that damnable [Entity]... <BR><BR>You finally did it...<BR><BR>You infused your very [Soul] into this block...<BR><BR>You don't know why, but you placed it under the central pedestal and attached your tubes to the bottom of this block and by the eldritch it [W0RKED!!]<BR><BR>He said he'd make you a [BIG SHOT], but what happens now?
 
+PreviousIntercepterLore=Do you hate how slow infusion is? Are you sick and tired of the lag associated with WAing it? WELL DO I HAVE THE SOLUTION FOR YOU!!! FOR ONE LOW LOW PAYMENT OF [$4.99 warp] I CAN JAILBREAK YOUR INFUSION MATRIX FOR YOU AND ALLOW IT TO ACCEPT THE ESSENTIA PROVIDER!!! Place the intercepter directly below your infusion altar's center pedestal, it takes essentia from the bottom face.
 
+item.ItemPactRing.name=Ring of Pacts
 
 
 tc.research_name.TI_SanitizingSoapAlpha=Sanitizing Soap Alpha
-tc.research_text.TI_SanitizingSoapAlpha=Every day we inch closer to replacing Azanor
+tc.research_text.TI_SanitizingSoapAlpha=
 
 tc.research_name.TI_SanitizingSoapBeta=Alastor's Soap
-tc.research_text.TI_SanitizingSoapBeta=Made from Azanor's tears
+tc.research_text.TI_SanitizingSoapBeta=In the [Deep Abyss] lies a [Great Deal] he said... but at what cost?
+
 
 unintelligbleLaughter=I USED TO BE NOTHING BUT THE E_MAIL GUY, NOW I'M THE [[It Burns! Ow! Stop! Help Me! It Burns!]] GUY!                                                [[Amazed at thi5 amazing transformation? You too can]] HAVE A [[Communion]] WITH [[Unintelligble Laughter]]
 SoapAlpha.1=[Insert punchline here] boosts the base chance for normal warp removal to 50% from 33%, so now you can guarantee normal warp removal!
-SoapBeta.1=Do you have perm warp that induces constant nightmares foreboding eldritch horrors rending your flesh from your bones? Have you grown a cloaca? Well I have the solution for you!  For the low low price of your [[soul]] you can have a [[miniscule]] chance to lower your perm warp by 1 at the low low price of [[2 normal]]                             Warning: This product will cause you to develop 2 points of temp warp for every failed attempt to remove perm warp. Purchase now at [[hyperlink blocked]]!
+SoapBeta.1=
 
-ThaumicInterfacer.1=You're not sure where you found this design. It looks like an early attempt at making or modifying a thaumometer, hence your working name for it. The device seems to show something, but not what a properly made one does.                             It seems like the work of someone tinkering with infusion, given its method of creation and its reaction to runic matrices. Probably just a curiosity, for the average thaumaturge not tinkering with the innate fundamentals of infusion.                             This likely won't help you on your journey young thaumaturge.
+.=Do you have perm warp that induces constant nightmares foreboding eldritch horrors rending your flesh from your bones? Have you grown a cloaca? Well I have the solution for you!  For the low low price of your [[soul]] you can have a [[miniscule]] chance to lower your perm warp by 1 at the low low price of [[2 normal]]                             Warning: This product will cause you to develop 2 points of temp warp for every failed attempt to remove perm warp. Purchase now at [[hyperlink blocked]]!
+
+ThaumicInterfacer.1=I'm not sure where I found this design. It looks like an early attempt at making or modifying a thaumometer, hence my working name for it. The device seems to show something, but not what a properly made one does.                             It seems like the work of someone tinkering with infusion, given its method of creation and its reaction to runic matrices. Probably just a curiosity, for the average thaumaturge not tinkering with the innate fundamentals of infusion.                             This likely won't help you on your journey young thaumaturge.
 
 tc.research_name.TI_DeliciousKromer=[[Funky]] LITTLE [[Worm]]
 tc.research_text.TI_DeliciousKromer=THIS IS [One Purchase] YOU WILL [Regret] FOR THE REST OF YOUR LIFE!
